# order_service

./: .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 0059645c151f_create_orders_table.py  07ef34dd6946_create_orders_table.py  0d62f6aba88d_create_orders_table.py  1451452f4092_create_orders_table.py  264530c2362f_create_orders_table.py  30b1994a4582_create_orders_table.py  414056ce2d86_create_orders_table.py  48137902521e_create_orders_table.py  53c4c6396121_create_orders_table.py  6f0b7205c7c7_create_orders_table.py  871f54fc3e8b_create_orders_table.py  8e4937c96f77_create_orders_table.py  9ba620fa7729_initial_migration.py  9bb30ddc5708_create_orders_table.py  a74d03ef6d53_create_orders_table.py  ac03f2e33ca2_create_orders_table.py  b4f63a3b0228_create_orders_table.py  be8edcbbc16f_create_orders_table.py  cc3e0d13f6ac_create_orders_table.py  d12b85075687_create_orders_table.py  d681f98805da_create_orders_table.py  d8c04f4fb0f7_initial_tables.py  d9af11847300_create_orders_table.py  e84c014a8605_create_orders_table.py  e916d7a84249_create_orders_table.py  f1491feaa5e6_create_orders_table.py  f703dd80052a_create_orders_table.py  fc19dc4a462b_create_orders_table.py  fdcb84fc5350_initial_migration.py
app/: api.py  clients.py  config.py  database.py  database_not_sync.py  database_sync.py  inbox_worker.py  kafka_service.py  kafka_worker.py  main.py  models.py  outbox_service.py  outbox_worker.py  schemas.py  shipping_worker.py
app/application/: create_order.py  (+5 more)
kube/: config
(+13 files in other folders)
